# combinatorialcodes

./: README.md  pyproject.toml  setup.cfg  setup.py
src/combinatorialcodes/: codes.py  pseudomonomials.py
