[metadata]
name = combinatorialcodes
description = Combinatorial Codes, convex codes, and morphisms
author = Alex Kunin
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Development Status :: 1 - Planning
    Intended Audience :: Mathematics/Research


[options]
packages =
    combinatorialcodes
python_requires = >=3.10
package_dir = 
    =src